--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
 - linux
 - osx
 
-before_install: make make_dirs && make clean
+before_install: make make_dirs && make clean_obj
 
 install: make
 
