--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install: make make_dirs && make clean_obj
 
 install: make
 
-script: bin/* 
+# Execute all the binary files in the bin/ directory
+script: find bin/ -maxdepth 1 -type f -exec {} \;
 
 notifications:
     email: false
